nambahin materi dan tugas p-3

--- a/tugas/tugas-p-2/index.html
+++ b/tugas/tugas-p-2/index.html
@@ -4,6 +4,9 @@
         <title>HSI?</title>
     </head>
     <body>
+        <div class="judul">
+        <h1 class="kotak">Website pelajar HTML HSI BS PURWOREJO</h1>
+        </div>
     <div class="judul">
         <img src="images/logo.webp" width="180">
         <h1 class="title">HSI Boarding School Purworejo</h1>
