--- a/tugas/tugas-p-3/biodata.html
+++ b/tugas/tugas-p-3/biodata.html
@@ -26,7 +26,7 @@
         <p class="paragraph-p"><img class="gambar"
         src="images/orang.jpg" alt="santri yang berasal dari medan">
         <br>halo guys, namaku Yunus Mashun, aku berasal dari medan <i>sumatera utara</i>,
-        <br>aku lahir pada tanggal <u>19 agustus 2010</u>dikota <b>cirebon</b>,
+        <br>aku lahir pada tanggal <u>19 agustus 2010</u> dikota <b>cirebon</b>,
         <br>saat ini aku sedang belajar html di pondok SMA IT HSI PURWOREJO,
         </p>
     </div>
@@ -54,7 +54,7 @@
         <p>
             nomor telepon: 0887-4043-1493
             <br>telegram:@Yunus M
-            <br>instagram: <a href="https://www.instagram.com/yunns161/?next=%2F">instagram/yunns161</a>
+            <br>instagram: <a style="text-decoration: none;" href="https://www.instagram.com/yunns161/?next=%2F">instagram/yunns161</a>
             <br>gmail: yunnsmashun@gmail.com
         </p>
         </div>
