--- a/materi/buatan sendiri/kultum/cek.html
+++ b/materi/buatan sendiri/kultum/cek.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .kotak {
+  /* 1. STATUS AWAL */
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  border-radius: 5px; /* Sedikit lengkungan */
+  
+  /* 2. PROPERTI TRANSISI */
+  /* Terapkan transisi ke SEMUA properti yang berubah, selama 0.3 detik, dengan kecepatan 'ease' */
+  transition: all 0.3s ease;
+}
+.kotak:hover {
+  width: 150px; /* Lebar bertambah 50px */
+  height: 50px; /* Tinggi bertambah 50px */
+  background-color: red; /* Warna berubah */
+  transform: rotate(10deg); /* Berputar sedikit */
+}
+    </style>
 </head>
 <body>
-    <h1>my life~</h1>
+    <h1 class="kotak">my life~</h1>
     <p><b>Lorem ipsum</b> dolor <i>sit amet consectetur</i> adipisicing . <br> <s>A ipsa id sed</s> ipsam repellendus sit <hr> itaque quibusdam <hr> eligendi aspernatur asperiores magni amet totam similique consequatur dolorem quae beatae, cum quo.</p>
     <p>karbon dioksida : CO<sub>2</sub></p>
     
