nambahin file tugas dan materi

--- a/tugas/tugas-p-3/biodata.html
+++ b/tugas/tugas-p-3/biodata.html
@@ -2,13 +2,16 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>biodata</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <main>
         <div class="judul">
         <img src="images/logo.webp" width="180">
         <h1 class="blue">biodata santri</h1>
-        <h3 class="blue">kelas 10-C asrama ibnul qoyyim</h3>
+        <h3 class="blue" class="Font">kelas 10-C asrama ibnul qoyyim</h3>
         </div>
         <hr>
         <nav>
