--- a/tugas/tugas-p-3/biodata.html
+++ b/tugas/tugas-p-3/biodata.html
@@ -26,12 +26,17 @@
         <hr>
         <div class="pengantar">
         <h3 class="title-pengantar">biodata singkat</h3>
-        <p class="paragraph-p"><img class="gambar"
+        <div class="kanan-kiri">
+        <img class="gambar"
         src="images/orang.jpg" alt="santri yang berasal dari medan">
+        <div>
+        <p class="paragraph-p">
         <br>halo guys, namaku Yunus Mashun, aku berasal dari medan <i>sumatera utara</i>,
         <br>aku lahir pada tanggal <u>19 agustus 2010</u> dikota <b>cirebon</b>,
         <br>saat ini aku sedang belajar html di pondok SMA IT HSI PURWOREJO,
         </p>
+    </div>
+    </div>
     </div>
         <hr>
         <div class="pengantar">
