--- a/tugas/tugas-p-3/jadwal.html
+++ b/tugas/tugas-p-3/jadwal.html
@@ -33,7 +33,7 @@
     <hr>
     <div class="jadwal">
         <h2 class="title-pengantar">Jadwal singkat</h2>
-        <table border="1" style="width: 70%;" id="table-basic">
+        <table border="1" style="width: 70%;" id="table-basic" class="kotak">
         <thead>
         <tr class="bg-blue">
             <th rowspan="2">Hari</th>
